--- a/src/components/duck-feeding-form/duck-feeding-form.styles.scss
+++ b/src/components/duck-feeding-form/duck-feeding-form.styles.scss
@@ -2,32 +2,9 @@
 .btn {
     padding: 8px 20px;
     border-radius: 0;
-    overflow: hidden;
-  
-    &::before {
-      position: absolute;
-      content: "";
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(
-        120deg,
-        transparent,
-        var(--primary-color),
-        transparent
-      );
-      transform: translateX(-100%);
-      transition: 0.6s;
-    }
   
     &:hover {
-      background: transparent;
-      box-shadow: 0 0 20px 10px hsla(204, 70%, 53%, 0.5);
-  
-      &::before {
-        transform: translateX(100%);
-      }
+        cursor: pointer;
     }
   }
   
@@ -35,8 +12,8 @@
     --input-default-border-color: white;
     --input-border-bottom-color: white;
     
-    input {
-      color: white;
+    input, select {
+      color: black;
       width: 300px;
       height: 40px;
     }
@@ -72,14 +49,13 @@
       margin: 0 0 24px 0;
     }
   
-    .form-input-material {
-      padding: 10px 15px;
-      margin: 12px 0;
-    }
+
   
     .btn {
-      width: 100%;
-      margin: 18px 0 9px 0;
+      color: white;
+      margin-top: 30px;
+      width: 60%;
+      background-color: #81b214;
     }
   }
   
