--- a/src/components/duck-feeding-form/duck-feeding-form.styles.scss
+++ b/src/components/duck-feeding-form/duck-feeding-form.styles.scss
@@ -26,20 +26,6 @@
   }
   
   .login-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 600px;
-    padding: 50px 40px;
-    color: white;
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 10px;
-    box-shadow: 0 0.4px 0.4px rgba(128, 128, 128, 0.109),
-      0 1px 1px rgba(128, 128, 128, 0.155),
-      0 2.1px 2.1px rgba(128, 128, 128, 0.195),
-      0 4.4px 4.4px rgba(128, 128, 128, 0.241),
-      0 12px 12px rgba(128, 128, 128, 0.35);
-  
     .display-row {
         display: flex;
         flex-direction: row;
@@ -56,6 +42,11 @@
       margin-top: 30px;
       width: 60%;
       background-color: #81b214;
+      transition: ease-in-out 200ms;
+
+      &:hover {
+        background-color: #91c788;
+      }
     }
   }
   
