--- a/src/components/duck-feeding-form/duck-feeding-form.styles.scss
+++ b/src/components/duck-feeding-form/duck-feeding-form.styles.scss
@@ -6,6 +6,9 @@
     &:hover {
         cursor: pointer;
     }
+    &:disabled {
+      background: #dddddd !important;
+    }
   }
   
   .form-input-material {
@@ -23,6 +26,15 @@
         display: block;
         width: 100%;
     }
+  }
+
+  .success-message {
+    background-color: #70af85;
+    padding: 10px 15px;
+    width: 100%;
+    text-align: center;
+    border-radius: 4px;
+    border: 1px solid;
   }
   
   .login-form {
@@ -50,3 +62,38 @@
     }
   }
   
+  .lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 20px;
+    height: 20px;
+  }
+  .lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    margin: 8px;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #fff transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
