fix date issue on fetched data

--- a/src/pages/duck-feeding-info/duck-feeding-info.styles.scss
+++ b/src/pages/duck-feeding-info/duck-feeding-info.styles.scss
@@ -3,7 +3,7 @@
     border-radius: 5px;
     margin: 10px auto;
     padding: 10px 15px;
-
+    width: 80%;
     span {
         color: #999;
     }
