made the application responsive in mobile browser

--- a/src/components/duck-feeding-form/duck-feeding-form.styles.scss
+++ b/src/components/duck-feeding-form/duck-feeding-form.styles.scss
@@ -14,10 +14,11 @@
   .form-input-material {
     --input-default-border-color: white;
     --input-border-bottom-color: white;
-    
+    width: 40%;
+    margin: auto;
     input, select {
       color: black;
-      width: 300px;
+      width: 100%;
       height: 40px;
     }
 
@@ -51,8 +52,9 @@
   
     .btn {
       color: white;
-      margin-top: 30px;
-      width: 60%;
+      display: block;
+      margin: 30px auto;
+      width: 40%;
       background-color: #81b214;
       transition: ease-in-out 200ms;
 
@@ -95,5 +97,10 @@
     }
     100% {
       transform: rotate(360deg);
+    }
+  }
+  @media (max-width: 800px) {
+    .smaller-font-size-header {
+      font-size: 18px !important;
     }
   }
