--- a/src/pages/duck-feeding-report-page/duck-feeding-report-page.styles.scss
+++ b/src/pages/duck-feeding-report-page/duck-feeding-report-page.styles.scss
@@ -2,7 +2,8 @@
 
 .lds-spinner {
     color: official;
-    display: inline-block;
+    display: block;
+    margin: auto;
     position: relative;
     width: 80px;
     height: 80px;
