--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,30 @@
 @import './styles-variables.scss';
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
   min-height: 100vh;
   background: #eceffc;
 }
 
 
 .box-format {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 600px;
+  display: block;
+  // flex-direction: column;
+  // align-items: center;
+  width: 80%;
+  margin: auto;
   padding: 50px 40px;
   color: white;
   background: rgba(0, 0, 0, 0.8);
   border-radius: 10px;
   box-shadow: $box-shadow;
+}
+
+
+@media (min-width: 1200px) {
+  .box-format{
+    width: 60% !important;
+  }
 }
